# Order_Management_System_for_a_Trading_Platform_cpp

./: CMakeLists.txt  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  README.md  main.cpp
include/: OrderManager.h
src/: Order.cpp  OrderManager.cpp  main.cpp
tests/: OrderManagerTest.cpp  OrderTest.cpp
